--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -122,7 +122,7 @@ jobs:
     - name: Run pytest examples/nypl_tests/test_footer.py --browser=chrome --xvfb --env=qa
       continue-on-error: true
       run: |
-        pytest examples/nypl_tests/test_footer.py --browser=chrome --headless -v -s
+        pytest examples/nypl_tests/test_footer.py --browser=chrome --headless -v -s --env=qa
     
     
     
