--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-# QA Env for Reno Project
+# QA Env Tests for Reno Project
 name: QA Env
 
 on:
@@ -61,62 +61,8 @@ jobs:
         
     
     
-    # NYPL tests for the folllowing pages;
+    # NYPL tests start here
     # footer, header, blog, blog all, book lists, campaigns, exhibitions, locations, online resources
-    
-    
-    #- name: Run pytest examples/nypl_tests/test_footer.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_footer.py --browser=chrome --headless -v -s
-    
-    
-    #- name: Run pytest examples/nypl_tests/test_header.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_header.py --browser=chrome --headless -v -s 
-    
-    
-    #- name: Run pytest examples/nypl_tests/test_blog.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_blog.py --browser=chrome --headless -v -s
-    
-    
-    #- name: Run pytest examples/nypl_tests/test_blog_all.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_blog_all.py --browser=chrome --headless -v -s 
-    
-    
-    #- name: Run pytest examples/nypl_tests/test_book_lists.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_book_lists.py --browser=chrome --headless -v -s 
-    
-        
-    #- name: Run pytest examples/nypl_tests/test_campaigns.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_campaigns.py --browser=chrome --headless -v -s 
-    
-    
-    #- name: Run pytest examples/nypl_tests/test_exhibitions.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_exhibitions.py --browser=chrome --headless -v -s 
-        
-        
-    #- name: Run pytest examples/nypl_tests/test_locations.py --browser=chrome --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_locations.py --browser=chrome --headless -v -s 
-        
-        
-    #- name: Run pytest examples/nypl_tests/test_online_resources.py --browser=chrome --env=qa --xvfb
-    #  continue-on-error: true
-    #  run: |
-    #    pytest examples/nypl_tests/test_online_resources.py --browser=chrome --headless -v -s 
     
     
     - name: Run pytest examples/nypl_tests/test_footer.py --browser=chrome --xvfb --env=qa
@@ -124,5 +70,52 @@ jobs:
       run: |
         pytest examples/nypl_tests/test_footer.py --browser=chrome --headless -v -s --env=qa
     
+    
+    - name: Run pytest examples/nypl_tests/test_header.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_header.py --browser=chrome --headless -v -s --env=qa
+    
+    
+    - name: Run pytest examples/nypl_tests/test_blog.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_blog.py --browser=chrome --headless -v -s --env=qa
+    
+    
+    - name: Run pytest examples/nypl_tests/test_blog_all.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_blog_all.py --browser=chrome --headless -v -s --env=qa
+    
+    
+    - name: Run pytest examples/nypl_tests/test_book_lists.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_book_lists.py --browser=chrome --headless -v -s --env=qa
+    
+        
+    - name: Run pytest examples/nypl_tests/test_campaigns.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_campaigns.py --browser=chrome --headless -v -s --env=qa
+    
+    
+    - name: Run pytest examples/nypl_tests/test_exhibitions.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_exhibitions.py --browser=chrome --headless -v -s --env=qa
+        
+        
+    - name: Run pytest examples/nypl_tests/test_locations.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_locations.py --browser=chrome --headless -v -s --env=qa
+        
+        
+    - name: Run pytest examples/nypl_tests/test_online_resources.py --browser=chrome --xvfb --env=qa
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_online_resources.py --browser=chrome --headless -v -s --env=qa
     
     
