--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,18 +37,17 @@ jobs:
         # pip install flake8
         # Stop the build if there are flake8 issues
         # flake8 . --count --show-source --statistics --exclude=temp
-    - name: Install Chrome and Firefox
+    - name: Install chromedriver
       run: |
-        sudo apt install google-chrome-stable
-        sudo apt-get install firefox
+        seleniumbase install chromedriver
     - name: Check the console scripts interface
       run: |
         seleniumbase
         sbase
-    - name: Install chromedriver and geckodriver (Firefox Webdriver)
-      run: |
-        seleniumbase install chromedriver
-        seleniumbase install geckodriver
+    #- name: Install chromedriver and geckodriver (Firefox Webdriver)
+    #  run: |
+    #    seleniumbase install chromedriver
+    #    seleniumbase install geckodriver
     - name: Make sure pytest is working
       run: |
         echo "def test_1(): pass" > nothing.py
