--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -128,4 +128,10 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_give.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
+        
+
+    - name: Run pytest test_schwarzman.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_schwarzman.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
 
