--- a/.github/workflows/qa_env.yml
+++ b/.github/workflows/qa_env.yml
@@ -134,4 +134,16 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_schwarzman.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+        
+
+    - name: Run pytest test_research.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_research.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+        
+
+    - name: Run pytest test_research_support.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_research_support.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
   
