--- a/.github/workflows/qa_env.yml
+++ b/.github/workflows/qa_env.yml
@@ -146,4 +146,10 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_research_support.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+        
+
+    - name: Run pytest test_snfl.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_snfl.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
   
