SNFL teen tests added

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: Production build
+name: Production Regression
 
 on:
   push:
@@ -153,5 +153,11 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_snfl.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
+        
+
+    - name: Run pytest test_snfl_teen.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_snfl_teen.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
 
 
