--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,4 +1,4 @@
-name: QA Env
+name: QA Regression
 
 on:
   push:
@@ -152,4 +152,10 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_snfl.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+        
+
+    - name: Run pytest test_snfl_teen.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_snfl_teen.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
   
