'Billy Rose' and 'Request Visit' pages added and tests updated.

--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -158,4 +158,16 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_snfl_teen.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+        
+
+    - name: Run pytest test_billy_rose.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_billy_rose.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+        
+
+    - name: Run pytest test_request_visit.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_request_visit.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
   
