--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -161,3 +161,13 @@ jobs:
         pytest examples/nypl_tests/test_snfl_teen.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
 
 
+    - name: Run pytest test_billy_rose.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_billy_rose.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
+        
+
+    - name: Run pytest test_request_visit.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_request_visit.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2
