--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,89 @@
-pip>=20.3.4;python_version<"3.6"
-pip>=21.3.1;python_version>="3.6" and python_version<"3.7"
-pip>=22.2.2;python_version>="3.7"
-packaging>=20.9;python_version<"3.6"
-packaging>=21.3;python_version>="3.6"
-setuptools>=44.1.1;python_version<"3.6"
-setuptools>=59.6.0;python_version>="3.6" and python_version<"3.7"
-setuptools>=63.4.1;python_version>="3.7"
-tomli>=1.2.3;python_version>="3.6" and python_version<"3.7"
-tomli>=2.0.1;python_version>="3.7"
-wheel>=0.37.1
-attrs>=21.4.0;python_version<"3.6"
-attrs>=22.1.0;python_version>="3.6"
-PyYAML>=6.0;python_version>="3.6"
-traitlets>=4.3.3;python_version<"3.7"
-traitlets>=5.3.0;python_version>="3.7"
-certifi>=2021.10.8;python_version<"3.6"
-certifi>=2022.6.15;python_version>="3.6"
-filelock>=3.2.1;python_version<"3.6"
-filelock>=3.4.1;python_version>="3.6" and python_version<"3.7"
-filelock>=3.7.1;python_version>="3.7"
-platformdirs>=2.0.2;python_version<"3.6"
-platformdirs>=2.4.0;python_version>="3.6" and python_version<"3.7"
-platformdirs>=2.5.2;python_version>="3.7"
-pyparsing>=2.4.7;python_version<"3.6"
-pyparsing>=3.0.7;python_version>="3.6" and python_version<"3.7"
-pyparsing>=3.0.9;python_version>="3.7"
-six==1.16.0
-ipdb==0.13.4;python_version<"3.6"
-ipdb==0.13.9;python_version>="3.6"
-parso==0.7.1;python_version<"3.6"
-parso==0.8.3;python_version>="3.6"
-jedi==0.17.2;python_version<"3.6"
-jedi==0.18.1;python_version>="3.6"
-idna==2.10;python_version<"3.6"
-idna==3.3;python_version>="3.6"
-chardet==3.0.4;python_version<"3.6"
-chardet==4.0.0;python_version>="3.6" and python_version<"3.7"
-chardet==5.0.0;python_version>="3.7"
-charset-normalizer==2.0.12;python_version>="3.6" and python_version<"3.7"
-charset-normalizer==2.1.0;python_version>="3.7"
-urllib3==1.26.11
-requests==2.27.1;python_version<"3.6"
-requests==2.27.1;python_version>="3.6" and python_version<"3.7"
-requests==2.28.1;python_version>="3.7"
-nose==1.3.7
-sniffio==1.2.0;python_version>="3.7"
-h11==0.13.0;python_version>="3.7"
-outcome==1.2.0;python_version>="3.7"
-trio==0.21.0;python_version>="3.7"
-trio-websocket==0.9.2;python_version>="3.7"
-pyopenssl==22.0.0;python_version>="3.7"
-wsproto==1.1.0;python_version>="3.7"
-selenium==3.141.0;python_version<"3.7"
-selenium==4.3.0;python_version>="3.7"
-msedge-selenium-tools==3.141.3;python_version<"3.7"
-more-itertools==5.0.0;python_version<"3.6"
-more-itertools==8.13.0;python_version>="3.6"
-cssselect==1.1.0
-sortedcontainers==2.4.0
-fasteners==0.16;python_version<"3.6"
-fasteners==0.17.3;python_version>="3.6"
-execnet==1.9.0
-pluggy==0.13.1;python_version<"3.6"
-pluggy==1.0.0;python_version>="3.6"
-py==1.8.1;python_version<"3.6"
-py==1.11.0;python_version>="3.6"
-pytest==4.6.11;python_version<"3.6"
-pytest==7.0.1;python_version>="3.6" and python_version<"3.7"
-pytest==7.1.2;python_version>="3.7"
-pytest-forked==1.3.0;python_version<"3.6"
-pytest-forked==1.4.0;python_version>="3.6"
-pytest-html==1.22.1;python_version<"3.6"
-pytest-html==2.0.1;python_version>="3.6"
-pytest-metadata==1.8.0;python_version<"3.6"
-pytest-metadata==1.11.0;python_version>="3.6" and python_version<"3.7"
-pytest-metadata==2.0.2;python_version>="3.7"
-pytest-ordering==0.6
-pytest-rerunfailures==8.0;python_version<"3.6"
-pytest-rerunfailures==10.2;python_version>="3.6"
-pytest-xdist==1.34.0;python_version<"3.6"
-pytest-xdist==2.5.0;python_version>="3.6"
-parameterized==0.8.1
-sbvirtualdisplay==1.1.0
+allure-pytest==2.13.1
+allure-python-commons==2.13.1
+appnope==0.1.3
+async-generator==1.10
+attrs==23.1.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
 behave==1.2.6
+certifi==2023.5.7
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==3.1.0
+chromedriver==2.24.1
+colorama==0.4.6
+commonmark==0.9.1
+cryptography==40.0.2
+cssselect==1.2.0
+decorator==5.1.1
+exceptiongroup==1.1.1
+execnet==1.9.0
+fasteners==0.18
+filelock==3.12.0
+h11==0.14.0
+idna==3.4
+importlib-metadata==6.0.0
+iniconfig==2.0.0
+ipdb==0.13.9
+ipython==7.34.0
+jaraco.classes==3.2.3
+jedi==0.18.1
+keyring==23.13.1
+latest==0.6.0
+markdown-it-py==2.2.0
+matplotlib-inline==0.1.3
+mdurl==0.1.2
+more-itertools==9.1.0
+nose==1.3.7
+outcome==1.2.0
+packaging==23.1
+parameterized==0.9.0
 parse==1.19.0
 parse-type==0.6.0
-soupsieve==1.9.6;python_version<"3.6"
-soupsieve==2.3.2.post1;python_version>="3.6"
-beautifulsoup4==4.9.3;python_version<"3.6"
-beautifulsoup4==4.11.1;python_version>="3.6"
-cryptography==2.9.2;python_version<"3.6"
-cryptography==36.0.2;python_version>="3.6" and python_version<"3.7"
-cryptography==37.0.4;python_version>="3.7"
-pygments==2.5.2;python_version<"3.6"
-pygments==2.12.0;python_version>="3.6"
-prompt-toolkit==1.0.18;python_version<"3.6"
-prompt-toolkit==3.0.30;python_version>="3.6"
-decorator==4.4.2;python_version<"3.6"
-decorator==5.1.1;python_version>="3.6"
-ipython==5.10.0;python_version<"3.6"
-ipython==7.16.1;python_version>="3.6" and python_version<"3.7"
-ipython==7.34.0;python_version>="3.7"
-matplotlib-inline==0.1.3;python_version>="3.7"
-colorama==0.4.5
-importlib-metadata==2.1.3;python_version<"3.6"
-importlib-metadata==4.2.0;python_version>="3.6" and python_version<"3.8"
+parso==0.8.3
+pdbp==1.4.0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.5.1
+pluggy==1.0.0
+prompt-toolkit==3.0.30
+ptyprocess==0.7.0
+py==1.11.0
 pycparser==2.21
-pymysql==0.10.1;python_version<"3.6"
-pymysql==1.0.2;python_version>="3.6"
-pyotp==2.3.0;python_version<"3.6"
-pyotp==2.6.0;python_version>="3.6"
-cffi==1.15.1
+Pygments==2.15.1
+PyMySQL==1.0.2
+pynose==1.4.4
+pyOpenSSL==23.1.1
+pyotp==2.8.0
+pyparsing==3.0.9
+PySocks==1.7.1
+pytest==7.3.1
+pytest-forked==1.6.0
+pytest-html==2.0.1
+pytest-metadata==2.0.4
+pytest-ordering==0.6
+pytest-rerunfailures==11.1.2
+pytest-xdist==3.2.1
+PyYAML==6.0
+requests==2.30.0
+requests-toolbelt==1.0.0
+rich==13.3.5
+sbvirtualdisplay==1.2.0
+selenium==4.9.1
+seleniumbase==4.14.9
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+tabcompleter==1.2.0
 toml==0.10.2
-typing-extensions==3.10.0.2;python_version<"3.6"
-typing-extensions==4.1.1;python_version>="3.6" and python_version<"3.7"
-typing-extensions==4.2.0;python_version>="3.7" and python_version<"3.9"
-rich==12.5.1;python_version>="3.6" and python_version<"4.0"
-
-# --- Testing Requirements --- #
-# ("pip install -r requirements.txt" also installs this, but "pip install -e ." won't.)
-
-coverage==5.5;python_version<"3.6"
-coverage==6.2;python_version>="3.6" and python_version<"3.7"
-coverage==6.4.2;python_version>="3.7"
-pytest-cov==2.12.1;python_version<"3.6"
-pytest-cov==3.0.0;python_version>="3.6"
-flake8==3.7.9;python_version<"3.6"
-flake8==5.0.4;python_version>="3.6"
-mccabe==0.6.1;python_version<"3.6"
-mccabe==0.7.0;python_version>="3.6"
-pyflakes==2.1.1;python_version<"3.6"
-pyflakes==2.5.0;python_version>="3.6"
-pycodestyle==2.5.0;python_version<"3.6"
-pycodestyle==2.9.1;python_version>="3.6"
-
-seleniumbase~=3.5.8
-selenium~=4.3.0
-pytest~=7.1.2
-requests~=2.28.1
-setuptools~=65.0.2
-fasteners~=0.17.3
-rich~=12.5.1
+tomli==2.0.1
+tqdm==4.65.0
+traitlets==5.3.0
+trio==0.22.0
+trio-websocket==0.10.2
+urllib3==2.0.2
+wcwidth==0.2.5
+websockets==10.4
+wsproto==1.2.0
+zipp==3.15.0
