--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ certifi==2023.5.7
 cffi==1.15.1
 chardet==5.1.0
 charset-normalizer==3.1.0
-chromedriver==2.24.1
 colorama==0.4.6
 commonmark==0.9.1
 cryptography==40.0.2
@@ -79,10 +78,11 @@ tabcompleter==1.2.0
 toml==0.10.2
 tomli==2.0.1
 tqdm==4.65.0
-traitlets==5.3.0
+traitlets==5.8.1
 trio==0.22.0
 trio-websocket==0.10.2
 urllib3==2.0.2
+urllib3-secure-extra==0.1.0
 wcwidth==0.2.5
 websockets==10.4
 wsproto==1.2.0
