World Literature Festival page added

--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -176,3 +176,8 @@ jobs:
       continue-on-error: true
       run: |
         pytest examples/nypl_tests/test_posada.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
+
+    - name: Run pytest test_world_literature.py
+      continue-on-error: true
+      run: |
+        pytest examples/nypl_tests/test_world_literature.py --rs --browser=chrome --headless -v -s -n=6 --reruns=2 --env=qa
