--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -59,13 +59,15 @@ jobs:
         
         
     
-    
-    # NYPL tests start here
-    # footer, header, blog, blog all, book lists, campaigns, exhibitions, locations, articles & databases, home, give, schwarzman
+    # NYPL tests for the following pages;
+    # footer, header, blog, blog all, book lists, campaigns, exhibitions, locations, articles & databases, home, give,
+    # schwarzman, research,
+
 
     - name: Run all tests
+      continue-on-error: true
       run: |
-        pytest examples --headless --browser=chrome --rs -v -s -n=6 --reruns=2 --reruns-delay=1 --env=qa
+        pytest examples/nypl_tests --headless --browser=chrome --rs -v -s -n=6 --reruns=2 --reruns-delay=1 --env=qa
     
     
     # - name: Run pytest test_footer.py
