--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
 # Display console output, disable cacheprovider, and have the ipdb debugger replace pdb:
-addopts = --capture=no -p no:cacheprovider --pdbcls=IPython.terminal.debugger:TerminalPdb
+addopts = --pspec --capture=no -p no:cacheprovider --pdbcls=IPython.terminal.debugger:TerminalPdb
 
 # Ignore warnings such as DeprecationWarning and PytestUnknownMarkWarning
 filterwarnings =
