--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,9 +1,9 @@
 name: QA Regression
 
 on:
-  push:
-    branches:
-      - master
+  #push:
+  #  branches:
+  #    - master
   workflow_dispatch:
 
 jobs:
