--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ pyOpenSSL==23.1.1
 pyotp==2.8.0
 pyparsing==3.0.9
 PySocks==1.7.1
-pytest==7.3.1
+pytest~=7.4.0
 pytest-forked==1.6.0
 pytest-html==2.0.1
 pytest-metadata==2.0.4
@@ -63,12 +63,12 @@ pytest-ordering==0.6
 pytest-rerunfailures==11.1.2
 pytest-xdist==3.2.1
 PyYAML==6.0
-requests==2.30.0
+requests~=2.31.0
 requests-toolbelt==1.0.0
-rich==13.3.5
+rich~=13.5.2
 sbvirtualdisplay==1.2.0
-selenium==4.9.1
-seleniumbase==4.14.9
+selenium~=4.11.2
+seleniumbase~=4.17.1
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -80,10 +80,13 @@ tqdm==4.65.0
 traitlets==5.8.1
 trio==0.22.0
 trio-websocket==0.10.2
-urllib3==2.0.2
+urllib3~=2.0.4
 urllib3-secure-extra==0.1.0
 wcwidth==0.2.5
 websockets==10.4
 wsproto==1.2.0
 zipp==3.15.0
 pytest-pspec== 0.0.4
+
+lxml~=5.1.0
+setuptools~=68.0.0
