--- a/examples/nypl_tests/requirements.txt
+++ b/examples/nypl_tests/requirements.txt
@@ -7,7 +7,7 @@ attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 behave==1.2.6
-certifi==2023.7.22
+certifi>=2023.7.22
 cffi==1.15.1
 chardet==5.2.0
 charset-normalizer==3.2.0
