--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 behave==1.2.6
-certifi==2023.5.7
+certifi>=2023.7.22
 cffi==1.15.1
 chardet==5.1.0
 charset-normalizer==3.1.0
