--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ nose==1.3.7
 outcome==1.2.0
 packaging==23.1
 parameterized==0.9.0
-parse==1.19.0
+parse>=1.19.1
 parse-type==0.6.0
 parso==0.8.3
 pdbp==1.4.0
