--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ cryptography==40.0.2
 cssselect==1.2.0
 decorator==5.1.1
 exceptiongroup==1.1.1
-execnet==1.9.0
+execnet>=1.9.0
 fasteners==0.18
 filelock==3.12.0
 h11==0.14.0
@@ -37,20 +37,20 @@ outcome==1.2.0
 packaging==23.1
 parameterized==0.9.0
 parse>=1.19.1
-parse-type==0.6.0
+parse-type>=0.6.0
 parso==0.8.3
 pdbp==1.4.0
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.5.1
-pluggy==1.0.0
+pluggy>=1.0.0
 prompt-toolkit==3.0.30
 ptyprocess==0.7.0
 py==1.11.0
 pycparser==2.21
 Pygments==2.15.1
 PyMySQL==1.0.2
-pynose==1.4.4
+pynose>=1.4.4
 pyOpenSSL==23.1.1
 pyotp==2.8.0
 pyparsing==3.0.9
@@ -79,7 +79,7 @@ tomli==2.0.1
 tqdm==4.65.0
 traitlets==5.8.1
 trio==0.22.0
-trio-websocket==0.10.2
+trio-websocket>=0.10.2
 urllib3~=2.0.4
 urllib3-secure-extra==0.1.0
 wcwidth==0.2.5
