--- a/examples/nypl_tests/requirements.txt
+++ b/examples/nypl_tests/requirements.txt
@@ -38,7 +38,7 @@ outcome==1.2.0
 packaging==23.1
 parameterized==0.9.0
 parse>=1.19.1
-parse-type==0.6.2
+parse-type>=0.6.2
 parso==0.8.3
 pdbp==1.4.3
 pexpect==4.8.0
