--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
-tabcompleter==1.2.0
+tabcompleter>=1.2.0
 toml==0.10.2
 tomli==2.0.1
 tqdm==4.65.0
