--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,92 @@
-allure-pytest==2.13.1
-allure-python-commons==2.13.1
+allure-pytest==2.13.2
+allure-python-commons==2.13.2
 appnope==0.1.3
 async-generator==1.10
-attrs==23.1.0
+attrs==23.2.0
 backcall==0.2.0
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.3
 behave==1.2.6
 certifi>=2023.7.22
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.1.0
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
 colorama==0.4.6
 commonmark==0.9.1
-cryptography==40.0.2
+cryptography==41.0.7
 cssselect==1.2.0
 decorator==5.1.1
-exceptiongroup==1.1.1
+exceptiongroup==1.2.0
 execnet>=1.9.0
-fasteners==0.18
-filelock==3.12.0
+fasteners==0.19
+filelock==3.13.1
 h11==0.14.0
-idna==3.4
-importlib-metadata==6.0.0
+idna==3.6
+importlib-metadata==7.0.1
 iniconfig==2.0.0
-ipdb==0.13.9
-ipython==7.34.0
-jaraco.classes==3.2.3
-jedi==0.18.1
-keyring==23.13.1
-markdown-it-py==2.2.0
-matplotlib-inline==0.1.3
+ipdb==0.13.13
+ipython==8.20.0
+jaraco.classes==3.3.0
+jedi==0.19.1
+keyring==24.3.0
+markdown-it-py==3.0.0
+matplotlib-inline==0.1.6
 mdurl==0.1.2
-more-itertools==9.1.0
+more-itertools==10.2.0
 nose==1.3.7
-outcome==1.2.0
-packaging==23.1
+outcome==1.3.0.post0
+packaging==23.2
 parameterized==0.9.0
 parse>=1.19.1
 parse-type>=0.6.0
 parso==0.8.3
-pdbp==1.4.0
-pexpect==4.8.0
+pdbp==1.5.0
+pexpect==4.9.0
 pickleshare==0.7.5
-platformdirs==3.5.1
-pluggy>=1.0.0
-prompt-toolkit==3.0.30
+platformdirs==4.1.0
+pluggy==1.3.0
+prompt-toolkit==3.0.43
 ptyprocess==0.7.0
 py==1.11.0
 pycparser==2.21
-Pygments==2.15.1
-PyMySQL==1.0.2
-pynose>=1.4.4
-pyOpenSSL==23.1.1
-pyotp==2.8.0
-pyparsing==3.0.9
+Pygments==2.17.2
+PyMySQL==1.1.0
+pynose==1.4.8
+pyOpenSSL==23.3.0
+pyotp==2.9.0
+pyparsing==3.1.1
 PySocks==1.7.1
-pytest~=7.4.0
+pytest==7.4.4
 pytest-forked==1.6.0
-pytest-html==2.0.1
-pytest-metadata==2.0.4
+pytest-html==4.1.1
+pytest-metadata==3.0.0
 pytest-ordering==0.6
-pytest-rerunfailures==11.1.2
-pytest-xdist==3.2.1
-PyYAML==6.0
+pytest-rerunfailures==13.0
+pytest-xdist==3.5.0
+PyYAML==6.0.1
 requests~=2.31.0
 requests-toolbelt==1.0.0
-rich~=13.5.2
-sbvirtualdisplay==1.2.0
-selenium~=4.11.2
-seleniumbase~=4.17.1
+rich==13.7.0
+sbvirtualdisplay==1.3.0
+selenium==4.16.0
+seleniumbase==4.22.5
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
-soupsieve==2.4.1
+soupsieve==2.5
 tabcompleter>=1.2.0
 toml==0.10.2
 tomli==2.0.1
-tqdm==4.65.0
-traitlets==5.8.1
-trio==0.22.0
+tqdm==4.66.1
+traitlets==5.14.1
+trio==0.24.0
 trio-websocket>=0.10.2
-urllib3~=2.0.4
+urllib3==2.1.0
 urllib3-secure-extra==0.1.0
-wcwidth==0.2.5
-websockets==10.4
+wcwidth==0.2.13
+websockets==12.0
 wsproto==1.2.0
-zipp==3.15.0
+zipp==3.17.0
 pytest-pspec== 0.0.4
 
 lxml~=5.1.0
-setuptools~=68.0.0
+setuptools==69.0.3
