--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ pyparsing==3.1.1
 PySocks==1.7.1
 pytest==7.4.4
 pytest-forked==1.6.0
-pytest-html==4.1.1
+pytest-html
 pytest-metadata==3.0.0
 pytest-ordering==0.6
 pytest-rerunfailures==13.0
