--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ appnope==0.1.3
 async-generator==1.10
 attrs==23.2.0
 backcall==0.2.0
-beautifulsoup4==4.12.3
+beautifulsoup4==4.12.2
 behave==1.2.6
 certifi>=2023.7.22
 cffi==1.16.0
@@ -57,7 +57,7 @@ pyparsing==3.1.1
 PySocks==1.7.1
 pytest==7.4.4
 pytest-forked==1.6.0
-pytest-html
+pytest-html==2.0.1
 pytest-metadata==3.0.0
 pytest-ordering==0.6
 pytest-rerunfailures==13.0
