--- a/examples/pytest.ini
+++ b/examples/pytest.ini
@@ -43,3 +43,6 @@ markers =
     release: custom marker
     staging: custom marker
     production: custom marker
+    regression: mark a test as part of the regression suite.
+
+
