--- a/pytest.ini
+++ b/pytest.ini
@@ -43,3 +43,5 @@ markers =
     release: custom marker
     staging: custom marker
     production: custom marker
+    regression_suite: mark a test as part of the regression suite.
+
