--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ idna==3.6
 chardet==5.2.0
 charset-normalizer==3.3.2
 urllib3>=1.26.18,<2.2.0;python_version>="3.10"
-requests==2.31.0
+requests~=2.32.3
 pynose==1.4.8
 sniffio==1.3.0
 h11==0.14.0
@@ -32,7 +32,7 @@ execnet==2.0.2
 iniconfig==2.0.0
 pluggy==1.3.0;python_version>="3.8"
 py==1.11.0
-pytest==7.4.4
+pytest~=8.3.3
 pytest-html==2.0.1
 pytest-metadata==3.0.0
 pytest-ordering==0.6
@@ -51,5 +51,11 @@ exceptiongroup==1.2.0
 pyotp==2.9.0
 markdown-it-py==3.0.0;python_version>="3.8"
 mdurl==0.1.2
-rich==13.7.0
+rich~=13.9.4
 pytest-pspec== 0.0.4
+
+seleniumbase~=4.32.12
+selenium~=4.26.1
+python-dotenv~=1.0.1
+urllib3~=2.2.3
+setuptools~=75.6.0
