--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -13,7 +13,7 @@ jobs:
       PY_COLORS: "1"
       CATALOG_USERNAME: ${{ secrets.CATALOG_USERNAME}}
       CATALOG_PASSWORD: ${{ secrets.CATALOG_PASSWORD}}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       max-parallel: 6
