Speakout and LCA tests added

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ CATALOG_PASSWORD=Ifwt1985*
 # BrowserStack Automation Credentials
 BROWSERSTACK_ACCESS_KEY=J18yxgyaqaEjAJ8wzyHs
 BROWSERSTACK_USERNAME=alkimcevik_9R4qNj
+
+# Library Card App Credentials
+LCA_PASSWORD=Lib@2025!
