secrets and .gitignore added

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,6 +13,7 @@ jobs:
       PY_COLORS: "1"
       CATALOG_USERNAME: ${{ secrets.CATALOG_USERNAME}}
       CATALOG_PASSWORD: ${{ secrets.CATALOG_PASSWORD}}
+      LCA_PASSWORD: ${{ secrets.LCA_PASSWORD}}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
